# yoladgu

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DISTRIBUTED_LOCKS_REPORT.md  Dockerfile  ELLIPSIS_COMPLETION_REPORT.md  EMBEDDING_SETUP_GUIDE.md  END_TO_END_PLAN.md  ERROR_AWARE_RECOMMENDER_README.md  LICENSE  LLM_MANAGEMENT_REPORT.md  LLM_SETUP_GUIDE.md  Makefile  PGVECTOR_SETUP_ANALYSIS.md  PROJECT_STRUCTURE_PLAN.md  README.md  README_ML_SYSTEM.md  REAL_MODELS_README.md  SCHEMA_VALIDATION_REPORT.md  SECURITY_AUDIT.md  TASK_LIST_BY_FUNCTIONALITY.md  VECTOR_IMPROVEMENTS_REPORT.md  VECTOR_INDEX_IMPROVEMENTS.md  adaptif_soru_oneri_sistemi_matematik_ingilizce_tam_mimari_plan_v_1 (1).md  adaptif_soru_oneri_sistemi_matematik_ingilizce_tam_mimari_plan_v_1.md  alembic.ini  api_endpoint_ornekleri_sla_ratelimit_v_1.md  api_endpoints_no_code_spec_v_1_fast_api.md  backend_spec_no_code_yapi_ddl_ozellikleri_open_api_semalari.md  backend_tasks.md  conftest.py  create_tables.py  docker-compose.yml  english_rag_tasks.md  engllmrag.md  env.template  frontend.md  huggingface-mcp-config.json  huggingface-mcp.json  matematik.md  (+13 more)
backend/: .env.backup  .env.example  .env_updated  .gitignore  .pylintrc  Dockerfile  ENHANCED_MONITORING.md  FINAL_IDE_FIX.md  FINAL_INTEGRATION_REPORT.md  INTEGRATION_STATUS.md  MCP_DEMO_README.md  Makefile  QUESTION_GENERATION.md  README.md  SECURITY.md  TASK_10_1_IMPLEMENTATION.md  TASK_6_IMPLEMENTATION.md  TASK_9_IMPLEMENTATION.md  alembic.ini  alembic.ini.bak  conftest.py  demo_advanced_features.py  demo_advanced_index.index  demo_hybrid_search.py  demo_math_recommendations.py  disable_ide_errors.py  docker-compose.yml  env.example  fix_ide.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.py  seed_db.py  setup.py  test_advanced_faiss.py  test_advanced_rag_system.py  test_answer_evaluation.py  test_dashboard.py  (+28 more)
backend/alembic/: env.py
backend/alembic/versions/: 53ceff8c85b1_add_student_response_table.py  README  add_pgvector_support.py  create_embeddings_table.py  f8a10708051d_initial_migration.py  improve_vector_indexes.py
backend/app/: __init__.py  api_admin.py  api_auth.py  api_index_admin.py  api_questions.py  api_recommend.py  api_student.py  api_teacher.py  api_vectors.py  database.py  database_enhanced.py  main.py  models.py  schemas.py  schemas_adaptive.py  schemas_quiz.py
backend/app/api/: embeddings.py
backend/app/core/: cache.py  config.py  costs.py  database.py  db.py  dependencies.py  deps.py  error_handling.py  errors.py  logging.py  mcp_client.py  mcp_config.py  middleware.py  rate_limit.py  security.py
backend/app/data/: sample_math_questions.py
backend/app/db/: base.py  models.py  session.py
backend/app/mcp/: client.py  client_v2.py  enhanced_server.py  fastmcp.py  manifest_generator.py  mcp.json  notify.py  schema_validator.py  server.py  server_simple.py
backend/app/middleware/: auth.py  cors.py  error_handler.py  rate_limiter.py  usage.py
backend/app/models/: __init__.py  error_pattern.py  math_error_detail.py  math_profile.py  pdf_upload.py  question.py  selection_history.py  spaced_repetition.py  student_attempt.py  student_progress.py  user.py
backend/app/repositories/: base_repository.py  error_pattern_repository.py  question_repository.py  student_attempt_repository.py  user_repository.py
backend/app/schemas/: __init__.py  answer.py  api_docs.py  auth.py  math_profile.py  pdf_upload.py  question.py  rag.py  user.py  vector_management.py
backend/app/services/: advanced_analytics.py  advanced_math_algorithms.py  advanced_rag.py  advanced_rag_system.py  advanced_retrieval.py  analytics_service.py  answer_evaluation_service.py  background_scheduler.py  bandit_service.py  batch_processing_service.py  cache_service.py  cefr_assessment_service.py  cefr_validator.py  cf.py  content_moderation_service.py  context_compression.py  critic_revise.py  dashboard_service.py  database_service.py  embedding_api.py  embedding_service.py  english_cloze_service.py  english_cloze_service_qg.py  english_generation_service.py  english_vector_examples.py  enhanced_cache_service.py  ensemble_weights.py  error_classifier_service.py  explainer_service.py  feature_store.py  irt_service.py  langchain_integration.py  level_adjustment_service.py  level_update_service.py  llm_enhanced_service.py  llm_gateway.py  llm_load_balancer.py  llm_rate_limiter.py  math_ab_testing.py  math_advanced_retrieval.py  (+40 more)
backend/app/tools/: neo4j_ingest.py
backend/app/utils/: auth.py  distlock_idem.py  metrics.py  seed_questions.py  vault.py
backend/app/workers/: __init__.py  main.py  nightly_index_builder.py
backend/data/questions/: README.md  english_questions_enhanced.json  example_math_questions.json
backend/jobs/: __init__.py  irt_batch_calibrate.py
backend/ml/: __init__.py
backend/ml/math/: __init__.py  irt.py  multiskill_elo.py  selector.py
backend/ml/nlp/: __init__.py  embedder.py  hybrid.py  index.py
backend/scripts/: init_database.py  init_system.py  load_english_questions_json.py  load_math_questions_json.py  migrate_metadata.py  setup_pgvector.py  setup_system.py
backend/tests/: conftest.py  test_database.py  test_main.py  test_math_ab_testing.py  test_math_quality_assurance.py  test_math_rag.py  test_math_solver.py  test_moderation.py  test_scheduler_script.py
backend/tests/integration/: test_pgvector_retrieve.py
backend/tests/unit/: test_context_schemas.py  test_idempotency.py
backend/x/: env.example  run_dev.py  test_answer_evaluation.py  test_auth.py  test_distributed_locks.py  test_embedding_service.py  test_llm_management.py  test_math_api.py  test_questions.py  test_spaced_repetition.py  test_task_11_2_complete.py  test_task_6_3_complete.py
x/: =1.11.0  API_ENDPOINTS.md  IDE_SETUP.md  disable_ide_errors.py  force_reload_ide.py  pyproject.toml  requirements.txt  setup_complete.py  test_answer_evaluation.py  test_auth.py  test_english_rag_complete.py  test_imports.py  test_pdf_upload.py  test_questions.py  test_questions.txt  test_task_10_complete.py
x/alembic/: env.py
x/app/: main.py
(+479 files in other folders)
