[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoladgu"
version = "1.0.0"
description = "AI-Powered Question Recommendation System"
authors = [{name = "ElanurBUZLUK", email = "elanur@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ai", "education", "recommendation", "ml"]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "redis>=5.0.1",
    "neo4j>=5.15.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "sentence-transformers>=2.2.0",
    "pgvector>=0.2.0",
    "river>=0.20.0",
    "scikit-learn>=1.3.0",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "structlog>=23.2.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",
    "openai>=1.3.0",
    "transformers>=4.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "mypy>=1.7.0",
]

test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[project.scripts]
yoladgu = "app.main:app"

[project.urls]
Homepage = "https://github.com/ElanurBUZLUK/yoladgu"
Repository = "https://github.com/ElanurBUZLUK/yoladgu"
Issues = "https://github.com/ElanurBUZLUK/yoladgu/issues"

# === CODE QUALITY CONFIGURATION ===

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.pytest_cache
    | \.venv
    | venv
    | build
    | dist
    | migrations
    | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app", "tests"]
known_third_party = [
    "fastapi", "sqlalchemy", "alembic", "pydantic", "redis",
    "neo4j", "numpy", "pandas", "sklearn", "transformers",
    "sentence_transformers", "prometheus_client", "structlog"
]

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]
exclude = [
    ".git",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "alembic/versions",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*" = ["ARG", "S101"]  # allow assert statements in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "redis",
    "neo4j",
    "sentence_transformers",
    "sklearn.*",
    "river.*",
    "pgvector",
    "prometheus_client",
    "structlog",
    "apscheduler.*",
    "slowapi",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/versions/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
